--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-slider-v2",
-  "version": "16.0.2",
+  "name": "ngx-slider-17",
+  "version": "17.0.0",
   "private": true,
   "description": "Self-contained, mobile friendly slider component for Angular 14/15/16 based on angularjs-slider",
   "keywords": [
@@ -26,7 +26,7 @@
     "prepare:lib": "node scripts/generate-lib-files.js",
     "prepare:demo-app": "node scripts/generate-demo-app-snippets.js && node scripts/generate-demo-app-docs.js && node scripts/copy-bootstrap-icons.js",
     "start": "npm run prepare && npx ng serve",
-    "build": "npm run build:lib && npm run build:demo-app",
+    "build": "npm run build:lib",
     "build:lib": "npm run prepare:lib && rimraf dist/ngx-slider && ng-packagr -p src/ngx-slider/ng-package.json && scss-bundle -e src/ngx-slider/lib/main.scss -o dist/ngx-slider/scss/ngx-slider.scss",
     "build:demo-app": "npm run prepare:demo-app && rimraf dist/demo-app && npx ng build --configuration production --base-href /ngx-slider/",
     "publish-gh": "scripts/publish-gh-pages.sh",
@@ -37,39 +37,39 @@
     "ci": "npm run test:once && npm run e2e && npm run lint && npm run build:lib && npm run build:demo-app"
   },
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/localize": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@angular/animations": "^17.0.1",
+    "@angular/common": "^17.0.1",
+    "@angular/compiler": "^17.0.1",
+    "@angular/core": "^17.0.1",
+    "@angular/forms": "^17.0.1",
+    "@angular/localize": "^17.0.1",
+    "@angular/platform-browser": "^17.0.1",
+    "@angular/platform-browser-dynamic": "^17.0.1",
+    "@angular/router": "^17.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "bootstrap-icons": "^1.10.5",
     "detect-passive-events": "^2.0.3",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.1"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-eslint/builder": "^16.0.3",
-    "@angular-eslint/eslint-plugin": "^16.0.3",
-    "@angular-eslint/eslint-plugin-template": "^16.0.3",
-    "@angular-eslint/schematics": "^16.0.3",
-    "@angular-eslint/template-parser": "^16.0.3",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-eslint/builder": "^17.0.1",
+    "@angular-eslint/eslint-plugin": "^17.0.1",
+    "@angular-eslint/eslint-plugin-template": "^17.0.1",
+    "@angular-eslint/schematics": "^17.0.1",
+    "@angular-eslint/template-parser": "^17.0.1",
+    "@angular/cli": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.1",
+    "@angular/language-service": "^17.0.1",
     "@types/estree": "^1.0.1",
     "@types/jasmine": "~4.3.4",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^16.18.36",
+    "@types/node": "^20.9.0",
     "@types/ws": "^8.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "codelyzer": "^6.0.2",
     "escape-html": "^1.0.3",
     "eslint": "^8.43.0",
@@ -81,7 +81,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "mkdirp": "^3.0.1",
-    "ng-packagr": "^16.0.0",
+    "ng-packagr": "^17.0.0",
     "prismjs": "^1.29.0",
     "protractor": "~7.0.0",
     "protractor-console-plugin": "^0.1.1",
@@ -89,8 +89,8 @@
     "scss-bundle": "^3.1.2",
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
-    "typedoc": "~0.24.8",
-    "typescript": "~5.0.4",
+    "typedoc": "^0.25.3",
+    "typescript": "~5.2.2",
     "webdriver-manager": "^12.1.9"
   }
 }
